# Forum

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindICU.cmake  README.md  example-log.settings  forum_settings-example.json  show_cpp_tests.sh  show_loc.sh  temp_disabled.travis.yml  travis.yml
plugins/ForumSearchUpdatePlugin/: CMakeLists.txt  ForumSearchUpdatePlugin.cpp  ForumSearchUpdatePlugin.h
src/ForumApp/: Application.cpp  Application.h  CMakeLists.txt  DefaultIOServiceProvider.cpp  DefaultIOServiceProvider.h  app.cpp
src/LibFastJsonWriter/: CMakeLists.txt  JsonCommon.h  JsonReadyString.h  JsonWriter.cpp  JsonWriter.h  StringBuffer.h  StringContainer.h
src/LibFastJsonWriter/private/: JsonWriter.cpp
src/LibForumCommandHandlers/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  CommandHandlers.h  VersionHandler.cpp
src/LibForumContext/: CMakeLists.txt  Configuration.cpp  Configuration.h  ContextProviderMocks.h  ContextProviders.cpp  ContextProviders.h  DefaultIOServiceProvider.h  IOServiceProvider.h  MetricsRepository.cpp  MetricsRepository.h
src/LibForumContext/private/: Configuration.cpp  ContextProviders.cpp  DefaultIOServiceProvider.cpp
src/LibForumData/: Authorization.h  AuthorizationGrantedPrivilegeStore.cpp  AuthorizationGrantedPrivilegeStore.h  AuthorizationPrivileges.h  CMakeLists.txt  ConstCollectionAdapter.h  DefaultAuthorization.h  DefaultThrottling.h  Entities.h  EntityAttachment.h  EntityAttachmentCollection.h  EntityCollection.cpp  EntityCollection.h  EntityCommonTypes.h  EntityDiscussionCategory.cpp  EntityDiscussionCategory.h  EntityDiscussionCategoryCollection.h  EntityDiscussionCategoryCollectionBase.h  EntityDiscussionMessage.h  EntityDiscussionMessageCollectionBase.h  EntityDiscussionTag.cpp  EntityDiscussionTag.h  EntityDiscussionTagCollection.h  EntityDiscussionTagCollectionBase.h  EntityDiscussionThread.cpp  EntityDiscussionThread.h  EntityDiscussionThreadCollection.h  EntityDiscussionThreadCollectionBase.h  EntityDiscussionThreadMessage.h  EntityDiscussionThreadMessageCollection.h  EntityDiscussionThreadMessageCollectionBase.h  EntityDiscussionThreadRefCountedCollection.h  EntityMessageComment.h  EntityMessageCommentCollection.h  EntityMessageCommentCollectionBase.h  EntityPointer.cpp  EntityPointer.h  EntityPrivateMessage.h  EntityPrivateMessageCollection.h  EntitySerialization.cpp  (+48 more)
src/LibForumData/private/: AuthorizationGrantedPrivilegeStore.cpp  DefaultAuthorization.cpp  DefaultThrottling.cpp  EntityAttachment.cpp  EntityAttachmentCollection.cpp  EntityCollection.cpp  EntityCollection.h  EntityDiscussionCategory.cpp  EntityDiscussionCategoryCollection.cpp  EntityDiscussionTag.cpp  EntityDiscussionTagCollection.cpp  EntityDiscussionThread.cpp  EntityDiscussionThreadCollection.cpp  EntityDiscussionThreadMessage.cpp  EntityDiscussionThreadMessageCollection.cpp  EntityMessageCommentCollection.cpp  EntityPointer.cpp  EntityPrivateMessageCollection.cpp  EntitySerialization.cpp  EntitySerialization.h  EntityUser.cpp  EntityUserCollection.cpp  MemoryRepositoryAttachment.cpp  MemoryRepositoryAuthorization.cpp  MemoryRepositoryAuthorization.h  MemoryRepositoryCommon.cpp  MemoryRepositoryCommon.h  MemoryRepositoryDiscussionCategory.cpp  MemoryRepositoryDiscussionCategory.h  MemoryRepositoryDiscussionTag.cpp  MemoryRepositoryDiscussionTag.h  MemoryRepositoryDiscussionThread.cpp  MemoryRepositoryDiscussionThread.h  MemoryRepositoryDiscussionThreadMessage.cpp  MemoryRepositoryDiscussionThreadMessage.cpp~RF11cd4f.TMP  MemoryRepositoryDiscussionThreadMessage.h  MemoryRepositoryStatistics.cpp  MemoryRepositoryStatistics.h  MemoryRepositoryUser.cpp  MemoryRepositoryUser.h  (+7 more)
src/LibForumHelpers/: CMakeLists.txt  CallbackWrapper.h  CircularBuffer.h  ConstCollectionAdapter.h  IpAddress.h  OutputHelpers.h  RandomGenerator.h  SeparateThreadConsumer.h  SpinLock.h  StateHelpers.h  StringHelpers.h  TypeHelpers.h  UuidString.h
src/LibForumHelpers/private/: IpAddress.cpp  RandomGenerator.cpp  StringHelpers.cpp  UuidString.cpp
src/LibForumPersistence/: CMakeLists.txt  EventImporter.h  EventObserver.h  PersistenceFormat.h
src/LibForumPersistence/private/: EventImporter.cpp  EventObserver.cpp  FileAppender.cpp  FileAppender.h  PersistenceBlob.cpp  PersistenceBlob.h  PersistenceFormat.h
src/LibForumRepository/: CMakeLists.txt  Configuration.cpp  ConstCollectionAdapter.h  Entities.h  EntityCollection.cpp  EntityCollection.h  EntitySerialization.cpp  EntitySerialization.h  MemoryRepository.cpp  MemoryRepository.h  OutputHelpers.h  RandomGenerator.cpp  RandomGenerator.h  Repository.h  ResourceGuard.h  StringHelpers.cpp  StringHelpers.h
src/LibForumServiceEndpoints/: CMakeLists.txt  CommandHandler.h  HttpListener.h  ServiceEndpointManager.h
src/LibForumServiceEndpoints/private/: AuthStore.h  CommandHandler.cpp  HttpListener.cpp  ServiceEndpointManager.cpp  ServiceEndpoints.cpp  ServiceEndpoints.h
src/LibHttp/: CMakeLists.txt  ConnectionManagerWithTimeout.h  FixedHttpConnectionManager.h  FixedSizeBufferPool.h  FixedSizeObjectPool.h  HttpConnection.h  HttpConstants.h  HttpListener.h  HttpParser.h  HttpRequest.h  HttpResponseBuilder.h  HttpRouter.h  HttpStringHelpers.h  IConnectionManager.h  ReadWriteBufferArray.h  StreamingConnection.h  TcpListener.h  Trie.h
src/LibHttp/private/: ConstantBuffer.h  (+19 more)
test/ForumServiceTests/: AccessRightTests.cpp  AllowAllAuthorization.h  CMakeLists.txt  CommandsCommon.cpp  CommandsCommon.h  DelegateObserver.h  DiscussionCategoryTests.cpp  DiscussionTagTests.cpp  DiscussionThreadTests.cpp  IdTests.cpp  IpAddressTests.cpp  JsonSerializationTests.cpp  ObserversTests.cpp  SimpleCommandTests.cpp  SortedVectorTests.cpp  StringTests.cpp  TestHelpers.cpp  TestHelpers.h  UserTests.cpp  main.cpp
test/HttpTests/: CMakeLists.txt  ParserTests.cpp  ResponseBuilderTests.cpp  TrieTests.cpp  main.cpp
test/MemoryRepositoryBenchmarks/: CMakeLists.txt  benchmarks.cpp
tools/HttpBenchmark/: CMakeLists.txt  main.cpp
tools/MessageExtractor/: CMakeLists.txt  main.cpp
tools/SearchDataExtractor/: CMakeLists.txt  main.cpp
(+25 files in other folders)
